--- a/.github/workflows/repository_dispatch.yml
+++ b/.github/workflows/repository_dispatch.yml
@@ -17,12 +17,11 @@ jobs:
           go-version-file: "go.mod"
           cache: true
 
-      - name: Execute Go from workflow_dispatch
-        if: github.event_name != 'repository_dispatch'
-        run: echo execute_go from workflow_dispatch
-
       - name: Execute Go from repository_dispatch
-        if: ${{ github.event_name == 'repository_dispatch' && github.event.action == 'execute_go123' }}
+        if: ${{ github.event_name == 'repository_dispatch' && github.event.action == 'execute_go' }}
         env:
           MESSAGE: ${{ github.event.client_payload.message }}
         run: go run .
+
+      - name: Execute Go from workflow_dispatch
+        run: echo execute_go from workflow_dispatch
