--- a/.github/workflows/repository_dispatch.yml
+++ b/.github/workflows/repository_dispatch.yml
@@ -24,4 +24,6 @@ jobs:
         run: go run .
 
       - name: Execute Go from workflow_dispatch
-        run: echo execute_go from workflow_dispatch
+        run: |
+          echo ${{ github.event.client_payload.message }}
+          echo execute_go from workflow_dispatch
