--- a/.github/workflows/repository_dispatch.yml
+++ b/.github/workflows/repository_dispatch.yml
@@ -3,8 +3,7 @@ on:
   repository_dispatch:
     types: execute_go
   workflow_dispatch:
-env:
-  env_1: hashito
+
 jobs:
   execute_go:
     runs-on: ubuntu-latest
@@ -23,10 +22,9 @@ jobs:
         env:
           MESSAGE: ${{ github.event.client_payload.message }}
         run: |
-          env_1=${{ github.event.client_payload.message }}
           go run .
 
       - name: Execute Go from workflow_dispatch
+         if: github.event_name == 'workflow_dispatch'
         run: |
-          echo $env_1
           echo execute_go from workflow_dispatch
