--- a/.github/workflows/repository_dispatch.yml
+++ b/.github/workflows/repository_dispatch.yml
@@ -5,6 +5,8 @@ on:
   workflow_dispatch:
 
 jobs:
+  env:
+    HELLO: Hello
   execute_go:
     runs-on: ubuntu-latest
     steps:
@@ -22,9 +24,11 @@ jobs:
         env:
           MESSAGE: ${{ github.event.client_payload.message }}
         run: |
+          echo ${{ github.event.client_payload.message }} >> $HELLO
           go run .
 
       - name: Execute Go from workflow_dispatch
         if: github.event_name == 'workflow_dispatch'
         run: |
+          echo $HELLO
           echo execute_go from workflow_dispatch
