--- a/.github/workflows/repository_dispatch.yml
+++ b/.github/workflows/repository_dispatch.yml
@@ -28,7 +28,7 @@ jobs:
           go run .
 
       - name: Execute Go from workflow_dispatch
-        if: github.event_name == 'workflow_dispatch'
+        #if: github.event_name == 'workflow_dispatch'
         run: |
           echo $HELLO
           echo execute_go from workflow_dispatch
