--- a/.github/workflows/repository_dispatch.yml
+++ b/.github/workflows/repository_dispatch.yml
@@ -34,6 +34,7 @@ jobs:
           MESSAGE: ${{ github.event.client_payload.message }}
         run: |
           echo "HELLO=${{ github.event.client_payload.message }}" >> $GITHUB_ENV
+          echo $PATHVER
           go run .
 
       - name: Execute Go from workflow_dispatch
