--- a/.github/workflows/repository_dispatch.yml
+++ b/.github/workflows/repository_dispatch.yml
@@ -27,13 +27,13 @@ jobs:
         if: ${{ github.event_name == 'repository_dispatch' && github.event.action == 'execute_go' }}
         run: |
           echo "HELLO=${{ github.event.client_payload.message }}" >> $GITHUB_ENV
-          echo "STAGE=master" >> $GITHUB_ENV
+          echo "STAGE=dev" >> $GITHUB_ENV
           echo "PATHVER=v1" >> $GITHUB_ENV
 
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          ref: ${{ env.STAGE }}
+          ref: apidoc/${{ env.STAGE }}
 
       - name: Set up Go
         uses: actions/setup-go@v5
