--- a/.github/workflows/repository_dispatch.yml
+++ b/.github/workflows/repository_dispatch.yml
@@ -46,13 +46,13 @@ jobs:
         env:
           MESSAGE: ${{ github.event.client_payload.message }}
         run: |
-          echo $HELLO
-          echo $PATHVER
+          echo ${{ env.HELLO }}
+          echo ${{ env.PATHVER }}
           go run .
 
       - name: Execute Go from workflow_dispatch
         #if: github.event_name == 'workflow_dispatch'
         run: |
-          echo $HELLO
-          echo $PATHVER
+          echo ${{ env.HELLO }}
+          echo ${{ env.PATHVER }}
           echo execute_go from workflow_dispatch
