--- a/.github/workflows/repository_dispatch.yml
+++ b/.github/workflows/repository_dispatch.yml
@@ -37,7 +37,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          ref: apidoc/${{ env.STAGE }}
+          #ref: apidoc/${{ env.STAGE }}
+          ref: master
 
       - name: Set up Go
         uses: actions/setup-go@v5
