--- a/.github/workflows/run_workflow.yml
+++ b/.github/workflows/run_workflow.yml
@@ -29,17 +29,17 @@ jobs:
           event-type: execute_go
           client-payload: '{"message": "Hello from github actions by gh!!"}'
 
-      - name: Execute repository_dispatch_by_curl
-        env:
-          TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-        run: |
-          curl -i \
-            -X POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer $TOKEN" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/n-aoki0409/test_gitaction/dispatches \
-            -d '{"event_type":"execute_go","client_payload":{"message":"Hello from github actions by curl!!"}}'
+      # - name: Execute repository_dispatch_by_curl
+      #   env:
+      #     TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+      #   run: |
+      #     curl -i \
+      #       -X POST \
+      #       -H "Accept: application/vnd.github+json" \
+      #       -H "Authorization: Bearer $TOKEN" \
+      #       -H "X-GitHub-Api-Version: 2022-11-28" \
+      #       https://api.github.com/repos/n-aoki0409/test_gitaction/dispatches \
+      #       -d '{"event_type":"execute_go","client_payload":{"message":"Hello from github actions by curl!!"}}'
 
       # - name: Execute repository_dispatch_by_github_app
       #   env:
