--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,30 @@
 version: 2.1
 
+orbs:
+  gh: circleci/github-cli@2.2.0
+
 jobs:
   build:
     docker:
       - image: circleci/node:17.2.0-buster
     working_directory: ~/build
     steps:
+      - gh/setup:
+        version: 2.23.0
       - checkout
       - run:
-          name: trigger repository dispatch
+          # name: trigger repository dispatch
+          # command: |-
+          #   curl -i \
+          #     -X POST \
+          #     -H "Accept: application/vnd.github+json" \
+          #     -H "Authorization: Bearer $PERSONAL_ACCESS_TOKEN" \
+          #     -H "X-GitHub-Api-Version: 2022-11-28" \
+          #     https://api.github.com/repos/n-aoki0409/test_gitaction/dispatches \
+          #     -d '{"event_type":"execute_go","client_payload":{"message":"Hello from github actions by circle ci!!"}}'
+          name: trigger workflow dispatch
           command: |-
-            curl -i \
-              -X POST \
-              -H "Accept: application/vnd.github+json" \
-              -H "Authorization: Bearer $PERSONAL_ACCESS_TOKEN" \
-              -H "X-GitHub-Api-Version: 2022-11-28" \
-              https://api.github.com/repos/n-aoki0409/test_gitaction/dispatches \
-              -d '{"event_type":"execute_go","client_payload":{"message":"Hello from github actions by circle ci!!"}}'
+            gh workflow run -f git-ref=master test.yml --repo n-aoki0409/test_gitaction
 
 workflows:
   build:
