--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,8 @@ jobs:
           name: trigger workflow dispatch
           command: |-
             gh workflow run -f git-ref=master test.yml --repo n-aoki0409/test_gitaction
+          environment:
+            GITHUB_TOKEN: $PERSONAL_ACCESS_TOKEN
 
 workflows:
   build:
