--- a/.github/workflows/repository_dispatch.yml
+++ b/.github/workflows/repository_dispatch.yml
@@ -58,7 +58,7 @@ jobs:
 
       - name: Execute Go from workflow_dispatch
         run: |
-          echo ${{ env.MESSAGEF }}
+          echo ${{ env.MESSAGE }}
           echo ${{ env.STAGE }}
           echo ${{ env.PATHVER }}
           echo execute_go from workflow_dispatch
