--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - image: circleci/node:17.2.0-buster
     working_directory: ~/build
     steps:
-      - gh/setup:
+      - gh/setup
       - checkout
       - run:
           # name: trigger repository dispatch
